test/expected/regression-http-close.txt
warning: you are using async-hook which is unstable.
/scripts/regression-http-close.js:21
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:21:15)
    at Server.g (events.js:292:16)
    at emitNone (events.js:86:13)
    at Server.emit (events.js:185:7)
    at emitCloseNT (net.js:1544:8)
    at _combinedTickCallback (internal/process/next_tick.js:71:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at Server._emitCloseIfDrained (net.js:1538:11)
    at Server.close (net.js:1523:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:20:14)
    at IncomingMessage.g (events.js:292:16)
    at emitNone (events.js:91:20)
    at IncomingMessage.emit (events.js:185:7)
    at endReadableNT (_stream_readable.js:974:12)
    at _combinedTickCallback (internal/process/next_tick.js:74:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at endReadable (_stream_readable.js:965:13)
    at IncomingMessage.Readable.read (_stream_readable.js:377:7)
    at flow (_stream_readable.js:761:34)
    at resume_ (_stream_readable.js:743:3)
    at _combinedTickCallback (internal/process/next_tick.js:74:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at resume (_stream_readable.js:730:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:722:5)
    at IncomingMessage.Readable.on (_stream_readable.js:692:12)
    at ClientRequest.get (/scripts/regression-http-close.js:17:9)
    at ClientRequest.g (events.js:292:16)
    at emitOne (events.js:96:13)
    at ClientRequest.emit (events.js:188:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:477:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:99:23)
    at Socket.socketOnData (_http_client.js:366:20)
    at emitOne (events.js:96:13)
    at Socket.emit (events.js:188:7)
    at readableAddChunk (_stream_readable.js:176:18)
    at Socket.Readable.push (_stream_readable.js:134:10)
    at TCP.onread (net.js:551:20)
    at new <anonymous> (_http_common.js:153:16)
    at exports.FreeList.alloc (internal/freelist.js:14:46)
    at tickOnSocket (_http_client.js:538:24)
    at onSocketNT (_http_client.js:589:5)
    at _combinedTickCallback (internal/process/next_tick.js:74:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at ClientRequest.onSocket (_http_client.js:581:11)
    at _http_agent.js:164:11
    at oncreate (_http_agent.js:235:5)
    at Agent.createSocket (_http_agent.js:197:5)
    at Agent.addRequest (_http_agent.js:157:10)
    at new ClientRequest (_http_client.js:163:16)
    at Object.request (http.js:26:10)
    at Object.get (http.js:30:21)
    at Server.listen (/scripts/regression-http-close.js:16:8)
    at Server.g (events.js:292:16)
    at emitNone (events.js:86:13)
    at Server.emit (events.js:185:7)
    at emitListeningNT (net.js:1288:10)
    at _combinedTickCallback (internal/process/next_tick.js:71:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at Server._listen2 (net.js:1276:11)
    at listen (net.js:1298:10)
    at doListening (net.js:1397:7)
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:62:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:81:10)
    at Object.lookup (dns.js:164:19)
    at lookupAndListen (net.js:1392:18)
    at Server.listen (net.js:1373:9)
    at Object.<anonymous> (/scripts/regression-http-close.js:12:4)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.runMain (module.js:605:10)
    at run (bootstrap_node.js:420:7)
    at startup (bootstrap_node.js:139:9)
    at bootstrap_node.js:535:3
